# llama2.rs

./: Cargo.toml  LICENSE  Readme.md
src/: lib.rs  main.rs  optimfn.rs  transformer.rs
tests/: matmul_test.rs  softmax_test.rs  tokenizer_test.rs
